--- a/stage3/designation-planning-web-service/.classpath
+++ b/stage3/designation-planning-web-service/.classpath
@@ -23,5 +23,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="/data"/>
+	<classpathentry kind="src" path="/common"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
