--- a/stage3/data/.classpath
+++ b/stage3/data/.classpath
@@ -11,5 +11,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="/common"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
