--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,16 @@
 *.war
 *.ear
 
+# VP trash
+*.vux
+*.lck
+*.bak
+
+# Old stuff 
+stage1/
+stage2/
+
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
