--- a/stage3/designation-planning-web-service/pom.xml
+++ b/stage3/designation-planning-web-service/pom.xml
@@ -34,6 +34,16 @@
 			<artifactId>dozer</artifactId>
 			<version>5.5.1</version>
 		</dependency>
+        <dependency>
+            <groupId>common</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+		<dependency>
+			<groupId>nowa.edukacja</groupId>
+			<artifactId>data</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 
