--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,6 @@ stage2/
 
 #Idea stuff
 *.idea/
-
+*.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
