New services, dao, impls and so on, first request

--- a/stage3/data/pom.xml
+++ b/stage3/data/pom.xml
@@ -157,7 +157,12 @@
 			<artifactId>dozer</artifactId>
 			<version>5.5.1</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.12</version>
+		</dependency>
 	</dependencies>
 
 	<build>
