--- a/stage3/common/pom.xml
+++ b/stage3/common/pom.xml
@@ -18,6 +18,13 @@
 			<artifactId>guava</artifactId>
 			<version>20.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.12</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
