--- a/stage3/data/src/main/resources/persistence-mysql.properties
+++ b/stage3/data/src/main/resources/persistence-mysql.properties
@@ -7,7 +7,7 @@ jdbc.pass=password
 # hibernate.X
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=false
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=none
 
 # envers.X
 envers.audit_table_suffix=_audit_log
