--- a/stage3/application/.classpath
+++ b/stage3/application/.classpath
@@ -24,5 +24,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="/designation-planning-web-service"/>
 	<classpathentry kind="src" path="/common"/>
+	<classpathentry kind="src" path="/data"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
