--- a/stage3/data/pom.xml
+++ b/stage3/data/pom.xml
@@ -162,15 +162,27 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.12</version>
 		</dependency>
-        <dependency>
-            <groupId>common</groupId>
-            <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>common</groupId>
+			<artifactId>common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-core</artifactId> -->
+<!-- 			<version>4.1.4.Final</version> -->
+<!-- 		</dependency> -->
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-entitymanager</artifactId> -->
+<!-- 			<version>5.2.3.Final</version> -->
+<!-- 		</dependency> -->
+	</dependencies>
 
 	<build>
-		<finalName>spring-hibernate4</finalName>
+		<finalName>spring-hibernate5</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -215,7 +227,7 @@
 		<org.springframework.data.version>1.10.5.RELEASE</org.springframework.data.version>
 
 		<!-- persistence -->
-		<hibernate.version>4.3.11.Final</hibernate.version>
+		<hibernate.version>5.2.4.Final</hibernate.version>
 		<hibernate-envers.version>${hibernate.version}</hibernate-envers.version>
 		<mysql-connector-java.version>5.1.40</mysql-connector-java.version>
 		<tomcat-dbcp.version>8.5.8</tomcat-dbcp.version>
@@ -249,7 +261,7 @@
 		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
 		<maven-resources-plugin.version>2.7</maven-resources-plugin.version>
 		<cargo-maven2-plugin.version>1.6.1</cargo-maven2-plugin.version>
-		<!-- <hibernate4-maven-plugin.version>1.1.0</hibernate4-maven-plugin.version> -->
+		<!-- <hibernate5-maven-plugin.version>1.1.0</hibernate5-maven-plugin.version> -->
 
 	</properties>
 
