--- a/stage3/application/.classpath
+++ b/stage3/application/.classpath
@@ -24,5 +24,10 @@
 	</classpathentry>
 	<classpathentry kind="src" path="/designation-planning-web-service"/>
 	<classpathentry kind="src" path="/common"/>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
